web/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  labels:
    component: web
spec:
  ports:
    - port: 80
  selector:
    component: web
